--- a/login/Login.html
+++ b/login/Login.html
@@ -3,14 +3,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Login.css">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
-    <div>
+    <div id="block">
         <div id="input">
-            <input type="text" id="username">
-            <input type="text" id="password">
-            <p>Forgot password</p>
+            <input type="text" placeholder="Username..." id="username">
+            <input type="text" placeholder="Password..." id="password">
+            <a href="reset">Forgot password?</a>
         </div>
         <div id="buttons">
             <button id="Login">Login</button>
