--- a/login/Login.html
+++ b/login/Login.html
@@ -2,6 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Login.css">
     <title>Login</title>
 </head>
@@ -16,6 +19,12 @@
             <button id="Login">Login</button>
             <button id="Signup">Signup</button>
         </div>
+</div>
+    <div id="vertical-ruler"></div>
+    <div id="webname">
+        <h2>The</h2>
+        <h1>Clothing</h1>
+        <h3>Co.</h3>
     </div>
 </body>
 </html>
