--- a/login/Login.html
+++ b/login/Login.html
@@ -11,7 +11,9 @@
 <body>
     <div id="block">
         <div id="input">
+            <h4>Username</h4>
             <input type="text" placeholder="Username..." id="username">
+            <h4>Password</h4>
             <input type="text" placeholder="Password..." id="password">
             <a href="reset">Forgot password?</a>
         </div>
