fix: minor updates

--- a/Login.html
+++ b/Login.html
@@ -18,8 +18,8 @@
             <a href="reset">Forgot password?</a>
         </div>
         <div id="buttons">
-            <button id="Login">Login</button>
-            <button id="Signup">Signup</button>
+            <a href="index.html"><button id="Login">Login</button></a>
+            <a href="Register.html"><button id="Signup">Signup</button></a>
         </div>
 </div>
     <div id="vertical-ruler"></div>
