--- a/Register.html
+++ b/Register.html
@@ -27,7 +27,7 @@
             <h4>Retype Password</h4>
             <input type="text" placeholder="retype password">
         </div>
-            <button>Regiter</button>
+            <a href="index.html"><button>Regiter</button></a>
         </div>
     </div>
     
